--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,9 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+  .hashy0917-icon {
+    animation: App-logo-spin infinite 5s linear;
+  }
 }
 
 .App-header {
