--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
     animation: App-logo-spin infinite 20s linear;
   }
   .hashy0917-icon {
-    animation: App-logo-spin infinite 5s linear;
+    animation: App-logo-spin infinite 30ms linear;
   }
 }
 
@@ -40,7 +40,7 @@
   }
 }
 
-.test{
+.Test{
   align-items: center;
   justify-content: center;
   background-color: #282c34;
