--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,10 @@
 }
 
 .Test{
+  display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
+  flex-direction: column;
   background-color: #282c34;
 }
